--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Abhraneel Sarma // abhsarma.github.io</title>
-	<meta name="keywords" content="Abhraneel Sarma, Abhraneel Sarma Northwestern, Abhraneel Sarma Research">
-	<meta name="description" content="Abhraneel Sarma, Personal Website">
-	<meta name="author" content="Abhraneel Sarma">
+	<title>Anna Tsvetkov // annatsv.github.io</title>
+	<meta name="keywords" content="Anna Tsvetkov, Anna Tsvetlkov Brown, Anna Tsvetkov Princeton, Anna Tsvetkov Philosophy">
+	<meta name="description" content="Anna Tsvetkov, Personal Website">
+	<meta name="author" content="Anna Tsvetkov">
 
 	<!-- Bootstrap Core CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
 				</div>
 				<div class="col-sm-5">
 					<h4 class="intro" style="margin: 0px 0px 8px 12px">Hi, I am</h4>
-					<h2 class="title">Abhraneel<br>Sarma<span style="color: #FD926F">.</span></h2>
+					<h2 class="title">Anna<br>Tsvetkov<span style="color: #FD926F">.</span></h2>
 				</div>
 			</div>
 			<div class="row">
