--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="info">                      
 						<div>
 							<p class="margin-top-xs intro">
-I am a Philosophy PhD and Computer Science (AI/ML) ScM student at <a href="https://philosophy.brown.edu/people" target="_blank">Brown</a>. I work with <a href="https://sites.google.com/view/adampautz/home" target="_blank">Adam Pautz</a>, <a href="https://cs.brown.edu/people/epavlick/" target="_blank">Ellie Pavlick</a>, <a href="https://vivo.brown.edu/display/cshill#" target="_blank">Chris Hill</a>, and <a href="https://consc.net/" target="_blank">David Chalmers</a>.
+I am a Philosophy PhD and Computer Science ScM student at <a href="https://philosophy.brown.edu/people" target="_blank">Brown</a>. I work with <a href="https://sites.google.com/view/adampautz/home" target="_blank">Adam Pautz</a>, <a href="https://cs.brown.edu/people/epavlick/" target="_blank">Ellie Pavlick</a>, <a href="https://vivo.brown.edu/display/cshill#" target="_blank">Chris Hill</a>, and <a href="https://consc.net/" target="_blank">David Chalmers</a>.
 							</p>
 							<p class="margin-top-xs intro">
 I am also an AI researcher at <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>. In the Fall, I will be an AI Postdoctoral Research Fellow at <a href="https://ai.princeton.edu/ai-lab" target="_blank">Princeton</a>.
