--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ You can email me at anna_tsvetkov [at] brown.edu.
 						<p class="margin-top-sm">
 							<span class="paper-title">
 								<a href="https://osf.io/preprints/osf/t4e9u_v1" target="_blank">
-									More Forecasts, More (Decision) Problems: How Uncertainty Representations for Multiple Forecasts Impact Decision Making
+									Can We Interpret Artificial Neural Networks As Having Beliefs and Desires?
 								</a>
 							</span><br>
 							<span class="authors"><span class="self">Abhraneel Sarma</span>, Maryam Hedayati and Matthew Kay</span><br>
