--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I am also an AI researcher at <a href="https://futuretech.mit.edu/" target="_bla
 
 							</p>
 							<p class="margin-top-xs intro">
-My research focuses on developing a human-centered AI. The goal of my work is to use philosophy to guide carefully designed experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
+My research focuses on developing human-centered AI. The goal of my work is to use philosophy to guide carefully designed experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
 
 You can email me at anna_tsvetkov [at] brown.edu.
 							</p>
