--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@ You can email me at anna_tsvetkov [at] brown.edu.
 							</span><br>
 							<span class="authors"><span class="self">Anna Tsvetkov</span><br>
 							<span class="venue">
-								The British Journal for the Philosophy of Science
 								<!-- <span class="paper-award">BEST PAPER HONORABLE MENTION</span> &#x25CF -->
-								<a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">PDF</a>
+<a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
+  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF
+</a>
 
 							</span>
 						</p>
