--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ You can email me at anna_tsvetkov [at] brown.edu.
 							<span class="venue">
 								<!-- <span class="paper-award">BEST PAPER HONORABLE MENTION</span> &#x25CF -->
 <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF
+  <i class="fa fa-file-o" aria-hidden="true" style="color: orange;"></i> PDF
 </a>
 
 							</span>
