--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ You can email me at anna_tsvetkov [at] brown.edu.
 							<a href="https://www.github.com/annatsv" class="contact-text">github</a>
 						</span> <br>
 						<span>
-							<a href="https://scholar.google.com/citations?user=4R4-V8QAAAAJ&hl=en&authuser=2" class="contact-text">
+							<a href="https://bsky.app/profile/annatsv.bsky.social" class="contact-text">
 								<i class="fa fa-graduation-cap fa-lg tiny social-icons email-icon"></i>
-								google scholar
+								bluesky
 							</a>
 						</span>
 					</div>
