--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ You can email me at anna_tsvetkov [at] brown.edu.
 							<span class="venue">
 								<!-- <span class="paper-award">BEST PAPER HONORABLE MENTION</span> &#x25CF -->
 <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <i class="fa fa-file-o" aria-hidden="true" style="color: #FD926F; margin-right: 5px;"></i> PDF
+  <i class="fa fa-file-o" aria-hidden="true" style="color: #FD926F; margin-right: 8px;"></i> PDF
 </a>
 
 
@@ -98,7 +98,7 @@ You can email me at anna_tsvetkov [at] brown.edu.
 						</span> <br>
 						<span>
 							<a href="https://bsky.app/profile/annatsv.bsky.social" class="contact-text">
-								<i class="fa fa-graduation-cap fa-lg tiny social-icons email-icon"></i>
+<i class="fa fa-globe fa-lg tiny social-icons email-icon" style="color: #FD926F;"></i>
 								bluesky
 							</a>
 						</span>
