--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ You can email me at anna_tsvetkov [at] brown.edu.
 							<span class="venue">
 								<!-- <span class="paper-award">BEST PAPER HONORABLE MENTION</span> &#x25CF -->
 <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <i class="fa fa-file-o fa-lg tiny social-icons email-icon" style="color: #FD926F; margin-right: 6px; vertical-align: middle;"></i>PDF
+  <i class="fa fa-file-o fa-lg tiny social-icons email-icon" style="color: #FD926F; margin-right: 6px"></i>PDF
 </a>
 
 
