--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 					<div class="info">                      
 						<div>
 							<p class="margin-top-xs intro">
-I am a Philosophy PhD and Computer Science ScM student at <a href="https://philosophy.brown.edu/people" target="_blank">Brown</a>. I work with <a href="https://sites.google.com/view/adampautz/home" target="_blank">Adam Pautz</a>, <a href="https://cs.brown.edu/people/epavlick/" target="_blank">Ellie Pavlick</a>, <a href="https://vivo.brown.edu/display/cshill#" target="_blank">Chris Hill</a>, and <a href="https://consc.net/" target="_blank">David Chalmers</a>.
+I'm a Philosophy PhD and Computer Science ScM student at <a href="https://philosophy.brown.edu/people" target="_blank">Brown</a>. I work with <a href="https://sites.google.com/view/adampautz/home" target="_blank">Adam Pautz</a>, <a href="https://cs.brown.edu/people/epavlick/" target="_blank">Ellie Pavlick</a>, <a href="https://vivo.brown.edu/display/cshill#" target="_blank">Chris Hill</a>, and <a href="https://consc.net/" target="_blank">David Chalmers</a>.
 							</p>
 							<p class="margin-top-xs intro">
-I am also an AI researcher at <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>. In the Fall, I will be an AI Postdoctoral Research Fellow at <a href="https://ai.princeton.edu/ai-lab" target="_blank">Princeton</a>.
+I'm also an AI researcher at <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>. In the Fall, I will be an AI Postdoctoral Research Fellow at <a href="https://ai.princeton.edu/ai-lab" target="_blank">Princeton</a>.
 
 							</p>
 							<p class="margin-top-xs intro">
-My research focuses on human-centered AI. The goal of my work is to use philosophy to guide carefully designed experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
+My research focuses on human-centered AI. The goal of my work is to use philosophy to guide experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
 							</p>
 							<p class="margin-top-xs intro">
 You can email me at anna_tsvetkov [at] brown.edu.
@@ -71,11 +71,15 @@ You can email me at anna_tsvetkov [at] brown.edu.
 								</a>
 							</span><br>
 							<span class="authors"><span class="self">Anna Tsvetkov</span><br>
-							<span class="venue">
-								<!-- <span class="paper-award">BEST PAPER HONORABLE MENTION</span> &#x25CF -->
-<a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-  <i class="fa fa-file-o fa-lg tiny social-icons email-icon" style="color: #FD926F; margin-right: 6px"></i>PDF
-</a>
+<span class="venue">
+  <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
+    <i class="fa fa-file-o fa-lg tiny social-icons email-icon" style="color: #FD926F; margin-right: 6px; vertical-align: middle;"></i>PDF
+  </a>
+  &nbsp;|&nbsp;
+  <a data-toggle="collapse" href="#abstract1" aria-expanded="false" aria-controls="abstract1">
+    Abstract
+  </a>
+</span>
 
 
 
