--- a/index.html
+++ b/index.html
@@ -72,11 +72,17 @@ You can email me at anna_tsvetkov [at] brown.edu.
 							</span><br>
 							<span class="authors"><span class="self">Anna Tsvetkov</span><br>
 <span class="venue">
-  <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
+  <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank" style="color: #333; text-decoration: none;">
     <i class="fa fa-file-o fa-lg tiny social-icons email-icon" style="color: #FD926F; margin-right: 6px; vertical-align: middle;"></i>PDF
   </a>
   &nbsp;|&nbsp;
-  <span data-toggle="collapse" href="#abstract1" aria-expanded="false" aria-controls="abstract1" style="cursor: pointer; color: #333;">
+  <span 
+    data-toggle="collapse" 
+    href="#abstract1" 
+    aria-expanded="false" 
+    aria-controls="abstract1" 
+    style="cursor: pointer; color: #333;"
+    class="abstract-toggle">
     Abstract
   </span>
 </span>
