--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
           <div class="info">
             <div>
               <p class="margin-top-xs intro">
-                I'm a Philosophy PhD and Computer Science ScM student at
-                <strong>Brown</strong>. I work with Adam Pautz, Ellie Pavlick, Chris Hill, and David Chalmers.
+                I’m a Philosophy PhD and Computer Science ScM student at
+                <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. I work with
+                <a href="https://sites.google.com/view/adampautz/home" target="_blank">Adam Pautz</a>,
+                <a href="https://cs.brown.edu/people/epavlick/" target="_blank">Ellie Pavlick</a>,
+                <a href="https://vivo.brown.edu/display/cshill#" target="_blank">Chris Hill</a>,
+                and <a href="https://consc.net/" target="_blank">David Chalmers</a>.
               </p>
               <p class="margin-top-xs intro">
-                I'm also an AI researcher at <strong>MIT FutureTech</strong>. In the Fall, I will be an AI Postdoctoral Research Fellow at <strong>Princeton</strong>.
+                I’m also an AI researcher at
+                <a href="https://futuretech.mit.edu/" target="_blank"><strong>MIT FutureTech</strong></a>. In the Fall, I will be an AI Postdoctoral Research Fellow at
+                <a href="https://ai.princeton.edu/ai-lab" target="_blank"><strong>Princeton</strong></a>.
               </p>
               <p class="margin-top-xs intro">
                 My research focuses on human-centered AI. The goal of my work is to use philosophy to guide experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
