--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
               <p class="margin-top-xs intro">
                 I’m a Philosophy PhD and Computer Science ScM student at
                 <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. I work with
-                <a href="https://sites.google.com/view/adampautz/home" target="_blank">Adam Pautz</a>,
-                <a href="https://cs.brown.edu/people/epavlick/" target="_blank">Ellie Pavlick</a>,
-                <a href="https://vivo.brown.edu/display/cshill#" target="_blank">Chris Hill</a>,
-                and <a href="https://consc.net/" target="_blank">David Chalmers</a>.
+                <a href="https://sites.google.com/view/adampautz/home" target="_blank"><strong>Adam Pautz<strong></a>,
+                <a href="https://cs.brown.edu/people/epavlick/" target="_blank"><strong>Ellie Pavlick<strong></a>,
+                <a href="https://vivo.brown.edu/display/cshill#" target="_blank"><strong>Chris Hill<strong></a>,
+                and <a href="https://consc.net/" target="_blank"><strong>David Chalmers<strong></a>.
               </p>
               <p class="margin-top-xs intro">
                 I’m also an AI researcher at
