--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="info">
             <div>
               <p class="margin-top-xs intro">
-                I am a Philosophy PhD and Computer Science ScM student at
+                I'm a Philosophy PhD and Computer Science ScM student at
                 <a href="https://philosophy.brown.edu/people" target="_blank"><strong>Brown</strong></a>. I work with
                 <a href="https://sites.google.com/view/adampautz/home" target="_blank"><strong>Adam Pautz<strong></a>,
                 <a href="https://cs.brown.edu/people/epavlick/" target="_blank"><strong>Ellie Pavlick<strong></a>,
@@ -55,7 +55,7 @@
                 and <a href="https://consc.net/" target="_blank"><strong>David Chalmers<strong></a>.
               </p>
               <p class="margin-top-xs intro">
-                I am also an AI researcher at
+                I'm also an AI researcher at
                 <a href="https://futuretech.mit.edu/" target="_blank"><strong>MIT FutureTech</strong></a>. In the Fall, I will be an AI Postdoctoral Research Fellow at
                 <a href="https://ai.princeton.edu/ai-lab" target="_blank"><strong>Princeton</strong></a>.
               </p>
