--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
           <img class="dp" src="img/social/abhraneel.png">
         </div>
         <div class="col-sm-5">
-          <h2 class="title">Anna<br>Tsvetkov<span style="color:#FD926F">.</span></h2>
+<h2 class="title">
+  Anna<br>
+  Tsvetkov
+</h2>
         </div>
       </div>
 
