--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Header -->
       <div class="row margin-top-xl">
         <div class="col-sm-2">
-          <img class="dp" src="img/social/abhraneel.png">
+          <img class="dp" src="img/social/tsvetkov.jpg">
         </div>
         <div class="col-sm-5">
 <h2 class="title">
