--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
         </div>
       </div>
 
+<!-- News -->
+<div class="row">
+  <div class="col-sm-7 margin-top-md">
+    <div class="projects">
+      <h2 class="section-title">News</h2>
+    </div>
+    <p class="margin-top-sm">
+      <strong>May 2026.</strong> Pleased to share that I will be speaking at the
+      <a href="https://philevents.org/event/show/137714" target="_blank">
+        Bilkent-UNAM Philosophy of Mind Conference
+      </a> in Turkey.
+    </p>
+  </div>
+</div>
+
+
       <!-- Publications -->
       <div class="row">
         <div class="col-sm-7 margin-top-md">
