--- a/index.html
+++ b/index.html
@@ -83,14 +83,22 @@
     <div class="projects">
       <h2 class="section-title">News</h2>
     </div>
-    <p class="margin-top-sm">
-      <strong>May 2026.</strong> Pleased to share that I will be speaking at the
-      <a href="https://philevents.org/event/show/137714" target="_blank">
-        Bilkent-UNAM Philosophy of Mind Conference
-      </a> in Turkey.
-    </p>
+    <!-- single news item -->
+    <div class="row margin-top-sm">
+      <div class="col-sm-2">
+        <strong>May 2026.</strong>
+      </div>
+      <div class="col-sm-10">
+        Pleased to share that I will be speaking at the
+        <a href="https://philevents.org/event/show/137714" target="_blank">
+          Bilkent-UNAM Philosophy of Mind Conference
+        </a>
+        in Turkey.
+      </div>
+    </div>
   </div>
 </div>
+
 
 
       <!-- Publications -->
