--- a/index.html
+++ b/index.html
@@ -83,21 +83,23 @@
     <div class="projects">
       <h2 class="section-title">News</h2>
     </div>
-    <!-- single news item -->
     <div class="row margin-top-sm">
       <div class="col-sm-2">
         <strong>May 2026.</strong>
       </div>
       <div class="col-sm-10">
-        Pleased to share that I will be speaking at the
-        <a href="https://philevents.org/event/show/137714" target="_blank">
-          Bilkent-UNAM Philosophy of Mind Conference
-        </a>
-        in Turkey.
+        <p>
+          Pleased to share that I’ll be speaking at the
+          <a href="https://philevents.org/event/show/137714" target="_blank">
+            <strong>Bilkent-UNAM Philosophy of Mind Conference</strong>
+          </a>
+          in Turkey.
+        </p>
       </div>
     </div>
   </div>
 </div>
+
 
 
 
