--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
         <p>
           Pleased to share that I’ll be speaking at the
           <a href="https://philevents.org/event/show/137714" target="_blank">
-            <strong>Bilkent-UNAM Philosophy of Mind Conference</strong>
-          </a>
-          in Turkey.
+            <strong>Bilkent-UNAM Philosophy of Mind Conference</strong>.
         </p>
       </div>
     </div>
