--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Anna Tsvetkov // annatsv.github.io</title>
+  <title>Anna Tsvetkov</title>
   <meta name="keywords" content="Anna Tsvetkov, Anna Tsvetlkov Brown, Anna Tsvetkov Princeton, Anna Tsvetkov Philosophy">
   <meta name="description" content="Anna Tsvetkov, Personal Website">
   <meta name="author" content="Anna Tsvetkov">
