--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 CV <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
               </a>
             </p>
-
+          </div>
+        </div>
+      </div>
 <!-- News -->
 <div class="row">
   <div class="col-sm-7 margin-top-md">
@@ -90,7 +92,10 @@
           <a href="https://philevents.org/event/show/137714" target="_blank">
             <strong>Bilkent-UNAM Philosophy of Mind Conference</strong>.
         </p>
-
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -132,7 +137,9 @@
               </p>
             </div>
           </p>
-
+        </div>
+      </div>
+                  
       <!-- Contact -->
       <div class="row">
         <div class="col-sm-7 margin-top-lg">
