--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
       </div>
 <!-- News -->
 <div class="row">
-  <div class="col-sm-7 margin-top-md">
+              <p class="margin-top-xs intro">
     <div class="projects">
       <h2 class="section-title">News</h2>
     </div>
     <div class="row margin-top-sm">
       <div class="col-sm-2">
-        <strong>May 2026.</strong>
+        <strong>May 2026</strong>
       </div>
       <div class="col-sm-10">
         <p>
@@ -101,7 +101,7 @@
 
       <!-- Publications -->
       <div class="row">
-        <div class="col-sm-7 margin-top-md">
+              <p class="margin-top-xs intro">
           <div class="projects">
             <h2 class="section-title">Publications</h2>
           </div>
@@ -142,7 +142,8 @@
                   
       <!-- Contact -->
       <div class="row">
-        <div class="col-sm-7 margin-top-lg">
+              <p class="margin-top-xs intro">
+
           <div class="projects">
             <h2 class="section-title">Contact</h2>
           </div>
