--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
 <!-- News -->
 <div class="row">
-              <p class="margin-top-xs intro">
+  <div class="col-sm-7 margin-top-md">
     <div class="projects">
       <h2 class="section-title">News</h2>
     </div>
@@ -101,7 +101,7 @@
 
       <!-- Publications -->
       <div class="row">
-              <p class="margin-top-xs intro">
+ <div class="col-sm-7 margin-top-md">
           <div class="projects">
             <h2 class="section-title">Publications</h2>
           </div>
@@ -142,7 +142,7 @@
                   
       <!-- Contact -->
       <div class="row">
-              <p class="margin-top-xs intro">
+ <div class="col-sm-7 margin-top-lg">
 
           <div class="projects">
             <h2 class="section-title">Contact</h2>
