--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
           </div>
         </div>
       </div>
+                  
 <!-- News -->
-<div class="row">
+<div class="row margin-top-md">
   <div class="col-sm-7 margin-top-md">
     <div class="projects">
       <h2 class="section-title">News</h2>
