--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
           <img class="dp" src="img/social/tsvetkov.jpg">
         </div>
         <div class="col-sm-5">
-<h2 class="title">
-  Anna<br>
-  Tsvetkov
-</h2>
+					<h4 class="intro" style="margin: 0px 0px 8px 12px">Hi, I am</h4>
+					<h2 class="title">Anna<br>Tsvetkov<span style="color: #FD926F">.</span></h2>
         </div>
       </div>
 
