--- a/index.html
+++ b/index.html
@@ -77,24 +77,22 @@
                   
 <!-- News -->
 <div class="row margin-top-md">
-  <div class="col-sm-7 margin-top-md">
-    <div class="projects">
-      <h2 class="section-title">News</h2>
-    </div>
+  <div class="col-sm-7">
+    <div class="projects"><h2 class="section-title">News</h2></div>
     <div class="row margin-top-sm">
-      <div class="col-sm-2">
-        <strong>May 2026</strong>
-      </div>
+      <div class="col-sm-2"><strong>May 2026</strong></div>
       <div class="col-sm-10">
-        <p>
+        <p class="news-text">
           Pleased to share that I’ll be speaking at the
           <a href="https://philevents.org/event/show/137714" target="_blank">
             <strong>Bilkent-UNAM Philosophy of Mind Conference</strong>.
+          </a>
         </p>
       </div>
     </div>
   </div>
 </div>
+
 
 
 
