--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
       <!-- Header -->
       <div class="row margin-top-xl">
         <div class="col-sm-2">
-          <img class="dp" src="img/social/tsvetkov.jpg">
         </div>
         <div class="col-sm-5">
-					<h4 class="intro" style="margin: 0px 0px 8px 12px">Hi, I am</h4>
-					<h2 class="title">Anna<br>Tsvetkov<span style="color: #FD926F">.</span></h2>
+					<h2 class="title">Anna<br>Tsvetkov<span 
         </div>
       </div>
 
