--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <!-- Header -->
       <div class="row margin-top-xl">
         <div class="col-sm-2">
+		          <img class="dp" src="img/social/tsvetkov_c.jpg">
+
         </div>
         <div class="col-sm-5">
 					<h2 class="title">Anna<br>Tsvetkov<span 
