--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a href="https://ai.princeton.edu/ai-lab" target="_blank"><strong>Princeton</strong></a>.
               </p>
               <p class="margin-top-xs intro">
-                My research focuses on developing human-centered AI. The goal of my work is to use philosophy to guide experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
+                My research focuses on human-centered AI. The goal of my work is to use philosophy to guide experiments on AI that deepen our understanding of the mind and, in turn, to use insights about the mind to build explainable and ethical AI.
               </p>
               <p class="margin-top-xs intro">
                 You can email me at anna_tsvetkov [at] brown.edu.
