--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
   <section id="portfolio">
     <div class="container">
 
-      <!-- Header -->
-      <div class="row margin-top-xl">
-        <div class="col-sm-2">
-		          <img class="dp" src="img/social/tsvetkov_c.jpg.png">
+<div class="row margin-top-xl">
+  <div class="col-sm-7">
+    <h4 class="intro" style="margin: 0 0 8px 12px">
+    <h2 class="title">
+      Anna<br>
+      Tsvetkov
+    </h2>
+  </div>
+  <div class="col-sm-5 text-right">
+    <img class="intro-photo" src="img/social/tsvetkov.jpg" alt="Anna Tsvetkov">
+  </div>
+</div>
 
-        </div>
-        <div class="col-sm-5">
-					<h2 class="title">Anna<br>Tsvetkov<span 
-        </div>
-      </div>
 
       <!-- Bio -->
       <div class="row">
