--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
       <!-- Publications -->
       <div class="row">
  <div class="col-sm-7 margin-top-md">
++  <div class="row margin-btm-lg">
+
           <div class="projects">
             <h2 class="section-title">Publications</h2>
           </div>
