--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                      style="color:#FD926F;margin-right:6px;vertical-align:middle"></i>
                   PDF
                 </a>
-                &nbsp;|&nbsp;
+                &nbsp;&bull;&nbsp;
                 <a
                   data-toggle="collapse"
                   href="#abstract1"
