--- a/index.html
+++ b/index.html
@@ -30,18 +30,16 @@
   <section id="portfolio">
     <div class="container">
 
-<div class="row margin-top-xl">
+
+<div class="row header-hero">
   <div class="col-sm-7">
-    <h4 class="intro" style="margin: 0 0 8px 12px">
-    <h2 class="title">
-      Anna<br>
-      Tsvetkov
-    </h2>
+    <h2 class="title">Anna<br>Tsvetkov</h2>
   </div>
   <div class="col-sm-5 text-right">
-    <img class="intro-photo" src="img/social/tsvetkov.jpg" alt="Anna Tsvetkov">
+    <img class="hero-photo" src="img/social/tsvetkov.jpg" alt="Anna Tsvetkov">
   </div>
 </div>
+
 
 
       <!-- Bio -->
