--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="container">
 
 
+<!-- Hero header -->
 <div class="row header-hero">
   <div class="col-sm-7">
     <h2 class="title">Anna<br>Tsvetkov</h2>
@@ -39,6 +40,7 @@
     <img class="hero-photo" src="img/social/tsvetkov.jpg" alt="Anna Tsvetkov">
   </div>
 </div>
+
 
 
 
