--- a/index.html
+++ b/index.html
@@ -102,51 +102,42 @@
 
 
 
-      <!-- Publications -->
-      <div class="row">
- <div class="col-sm-7 margin-top-md">
-+  <div class="row margin-btm-lg">
-
-          <div class="projects">
-            <h2 class="section-title">Publications</h2>
-          </div>
-          <p class="margin-top-sm">
-            <span class="paper-title">
-                Can We Interpret Artificial Neural Networks As Having Beliefs and Desires?
-              </a>
-            </span><br>
-            <span class="authors">
-              <span class="self">Anna Tsvetkov</span><br>
-              <span class="venue">
-                <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
-                  <i class="fa fa-file-o fa-lg tiny social-icons email-icon"
-                     style="color:#FD926F;margin-right:6px;vertical-align:middle"></i>
-                  PDF
-                </a>
-                &nbsp;&bull;&nbsp;
-                <a
-                  data-toggle="collapse"
-                  href="#abstract1"
-                  aria-expanded="false"
-                  aria-controls="abstract1"
-                  style="cursor:pointer;"
-                >
-                  Abstract
-                </a>
-              </span>
-            </span>
-
-            <div class="collapse" id="abstract1" style="margin-top:10px;">
-              <p>
-                Can we interpret the internal workings of artificial neural networks in terms of beliefs and desires? A central aim in mechanistic interpretability is to explain the inner workings of artificial neural networks in terms that we can understand. Since we explain human beings in terms of beliefs and desires, it is natural to ask whether we can explain artificial neural networks in these terms too. In recent work, David Chalmers (2025) proposes propositional interpretability as an important approach within mechanistic interpretability, arguing that the computational states of artificial neural networks can be explained in terms of propositional attitudes—states like beliefs, desires, and subjective probabilities to propositions. This paper examines the prospects for propositional interpretability as a framework for explaining the internal workings of artificial neural networks. I draw attention to a number of empirical and methodological problems with propositional interpretability that are based on a philosophical gloss of recent findings in the mechanistic interpretability literature. Some of these challenges, such as determining whether artificial neural networks encode propositions rather than unbound concepts, might be mitigated through new interpretability techniques and open up exciting avenues for future research. Other problems, including reliably mapping computational states to propositional attitudes and managing an explosion of potential propositional interpretations, present serious difficulties for the approach. The challenges should be of interest both to philosophers seeking to engage with empirical work in mechanistic interpretability and to neural network researchers aiming to develop novel interpretability methods informed by philosophical insights.
-              </p>
-            </div>
-          </p>
-        </div>
-      </div>
-                  
-
+<!-- Publications -->
+<div class="row">
+  <div class="col-sm-7 margin-top-md margin-btm-lg">
+    <div class="projects">
+      <h2 class="section-title">Publications</h2>
     </div>
-  </section>
-</body>
-</html>
+    <p class="margin-top-sm">
+      <span class="paper-title">
+        <a href="https://osf.io/preprints/osf/t4e9u_v1" target="_blank">
+          Can We Interpret Artificial Neural Networks As Having Beliefs and Desires?
+        </a>
+      </span><br>
+      <span class="authors">
+        <span class="self">Anna Tsvetkov</span><br>
+        <span class="venue">
+          <a href="pubs/CHI2025-multiple_forecasts.pdf" target="_blank">
+            <i class="fa fa-file-o fa-lg tiny social-icons email-icon"></i> PDF
+          </a>
+          &nbsp;&bull;&nbsp;
+          <a
+            data-toggle="collapse"
+            href="#abstract1"
+            aria-expanded="false"
+            aria-controls="abstract1"
+            class="abstract-toggle"
+          >
+            Abstract
+          </a>
+        </span>
+      </span>
+    </p>
+    <div class="collapse" id="abstract1" style="margin-top:10px;">
+      <p class="abstract-text">
+Can we interpret the internal workings of artificial neural networks in terms of beliefs and desires? A central aim in mechanistic interpretability is to explain the inner workings of artificial neural networks in terms that we can understand. Since we explain human beings in terms of beliefs and desires, it is natural to ask whether we can explain artificial neural networks in these terms too. In recent work, David Chalmers (2025) proposes propositional interpretability as an important approach within mechanistic interpretability, arguing that the computational states of artificial neural networks can be explained in terms of propositional attitudes—states like beliefs, desires, and subjective probabilities to propositions. This paper examines the prospects for propositional interpretability as a framework for explaining the internal workings of artificial neural networks. I draw attention to a number of empirical and methodological problems with propositional interpretability that are based on a philosophical gloss of recent f indings in the mechanistic interpretability literature. Some of these challenges, such as determining whether artificial neural networks encode propositions rather than unbound concepts, might be mitigated through new interpretability techniques and open up exciting avenues for future research. Other problems, including reliably mapping computational states to propositional attitudes and managing an explosion of potential propositional interpretations, present serious difficulties for the approach. The challenges should be of interest both to philosophers seeking to engage with empirical work in mechanistic interpretability and to neural network researchers aiming to develop novel interpretability methods informed by philosophical insights.
+      </p>
+    </div>
+  </div>
+</div>
+
