--- a/index.html
+++ b/index.html
@@ -141,3 +141,23 @@ Can we interpret the internal workings of artificial neural networks in terms of
   </div>
 </div>
 
+<!-- Works in Progress -->
+<div class="row">
+  <div class="col-sm-7 margin-top-md margin-btm-lg">
+    <div class="projects">
+      <h2 class="section-title">Works in Progress</h2>
+    </div>
+    <p class="margin-top-sm">
+      Comments welcome!
+    </p>
+    <p class="margin-top-xs">
+      Can Large Language Models Represent Perceptual Reality?<br>
+      Molyneux's Question and Multimodal Models<br>
+      Scientific Use of Foundation Models&emsp;and Democratization of AI 
+      (In collaboration with 
+      <a href="https://futuretech.mit.edu/" target="_blank">MIT FutureTech</a>)
+    </p>
+  </div>
+</div>
+
+
